<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Banlinea Control</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sign_in">Ingreso</string>
    <string name="username">Nombre de Usuario</string>
    <string name="password">Contraseña</string>
    <string name="sign_in_button">Ingresar</string>
    <string name="register_button">Registrarse</string>
    <string name="password_forget_button">Olvidé mi contraseña</string>
    <string name="title_activity_register">Register New User</string>
    <string name="first_name">Nombres</string>
    <string name="last_name">Apellidos</string>
    <string name="email">Correo Electrónico</string>
    <string name="password_verification">Verificar Contraseña</string>
    <string name="register_instructions">Complete los siguientes datos y luego seleccione \&quot;Registrar\&quot; para crear su nueva cuenta.</string>
    <string name="title_activity_reminder_setup">Configuración de Recordatorios</string>
    <string name="turn_on_reminders">Habilitar recoratorios diarios</string>
    <string name="reminders_enabled">Recordatorios habilitados</string>
    <string name="continue_text">Continuar</string>
    <string name="title_activity_initial_setup">Configuracion Inicial</string>
    <string name="title_section1">Ingresos</string>
    <string name="title_section2">Egresos</string>
    <string name="title_section3">Servicios</string>
    <string name="cancel">Cancelar</string>
    <string name="amount">Monto</string>
    <string name="amount_hint">$10.000</string>
    <string name="expenses">Egresos</string>
    <string name="live_alone_question">¿Vives sólo?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="incomes">Ingresos</string>
    <string name="incomes_question">¿Cuánto suman tus ingresos?</string>
    <string name="public_services">Servicios Públicos</string>
    <string name="public_services_question">Ingresa tus consumos a continuación.</string>
    <string name="light_service">Luz</string>
    <string name="water_service">Agua</string>
    <string name="gas_service">Gas</string>
    <string name="other_services">Otros</string>
    <string name="finish">Finalizar</string>
    <string name="title_activity_balance">Balance Personal</string>
    <string name="balance">Balance Personal</string>
    <string name="title_activity_register_transaction">Registrar Transacción</string>
    <string name="register_transaction">Registrar Transacción</string>
    <string name="type">Tipo</string>
    <string name="register_transaction_button">Registrar</string>
    <string name="use_product_question">¿Utilizaste un producto financiero?</string>

    <string-array name="transaction_type">
        <item>Ahorro</item>
        <item>Gasto</item>
        <item>Ingreso</item>
    </string-array>

    <string name="transaction_type_prompt">Selecciona un tipo de transacción</string>
    <string name="transaction_category_prompt">Selecciona una categoría</string>
    <string name="transaction_product_prompt">Selecciona un producto financiero</string>
    <string name="initial_setup_prompt_title">Configuración Inicial</string>
    <string name="initial_setup_prompt">¿Deseas realizar una configuración inicial?</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="rent_question">¿Cuánto pagas de renta/hipoteca?</string>
    <string name="manage_categories">Gestionar Categorias</string>
    <string name="reminders_setup">Configurar recordatorios</string>
    <string name="exit_prompt">¿Desea salir de la aplicación?</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="title_activity_category_manager">CategoryManagerActivity</string>
    <string name="category_name">Nombre de categoria</string>
    <string name="parent_category">Categoria padre</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="add_category">Crear Categoría</string>
    <string name="delete_category_title">Eliminar Categoría</string>
    <string name="delete_category_message">¿Estás seguro de eliminar esta categoría?</string>
    <string name="select_parent_category">Selecciona la categoría padre</string>
    <string name="edit_category_title">Editar Categoría</string>
    <string name="confirm">Confirmar</string>
    <string name="expense">Gasto</string>
    <string name="income">Ingreso</string>
    <string name="saving">Ahorro</string>
    <string name="login_error_message">E-mail o contraseña incorrecta.\nInténtalo de nuevo.</string>
    <string name="connection_error_message">Error de conexión con el servidor.\nIntenta de nuevo más tarde.</string>
    <string name="password_error_message">Las contraseñas no coinciden. Por favor revisalas.</string>
    <string name="number_format_error_message">Formato de número errado.</string>
    <string name="title_activity_category_management">Gestión de Categorías</string>
    <string name="expenses_title">Gastos</string>
    <string name="incomes_title">Ingresos</string>
    <string name="savings_title">Ahorros</string>
    <string name="children_parent_category_error">Una categoría no puede ser padre si ya tiene un padre. Intenta otra categoría</string>
    <string name="category_budget_title">Presupuesto de categoría</string>
    <string name="category_budget_message">El presupuesto para esta categoría es:</string>
    <string name="on">Activados</string>
    <string name="off">Desactivados</string>
    <string name="reminder_message">¿Ya registraste hoy tus transacciones?</string>
    <string name="exit_app">Salir de Banlinea Control</string>
    <string name="exit_message">¿Deseas salir de la aplicación?</string>
    <string name="reminder_set_message">Recordatorios activados diariamente a las 8 PM</string>
    <string name="manage_products">Productos Financieros</string>
    <string name="title_activity_product_management">Gestión de Productos</string>
    <string name="add_product">Registrar Producto</string>
    <string name="title_bank_account">Cuentas de Ahorro</string>
    <string name="title_credit_card">Tarjetas de Crédito</string>
    <string name="product_name">Nombre de Producto</string>
    <string name="product_bank">Entidad Bancaria</string>
    <string name="edit_product_title">Editar Producto</string>
    <string name="create_product_title">Registrar Producto</string>
    <string name="product_created">Producto Registrado</string>
    <string name="safe_to_spend">Tu presupuesto para hoy</string>
    <string name="promos_button">Tus Promociones</string>
    <string name="category_manager_is_fixed_budget">Es un presupuesto fijo?</string>
    <string name="title_activity_promos">Promociones</string>
    <string name="valid">Válidez:</string>
    <string name="description">Descripción</string>
    <string name="title_activity_transaction_list">Historial de Transacciones</string>

</resources>
