<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_balance"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".BalanceActivity" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/balance"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/daily_balance_wrapper"
                android:layout_width="210dp"
                android:layout_height="210dp"
                android:layout_margin="5dp"
                android:background="@drawable/circle_blue"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="-80dp"
                    android:text="+"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="80sp" />

                <TextView
                    android:id="@+id/dailySafeToSpend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="$100.000"
                    android:textColor="#fff"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/dailySafeToSpend"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginBottom="-20dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/safe_to_spend"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="bottom|center_horizontal" >

                <LinearLayout
                    android:id="@+id/weekly_balance_wrapper"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/circle_mid_blue"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/weeklySafeToSend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="$100.000"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Presupuesto\nSemanal"
                        android:textColor="#FFFFFF"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/monthly_balance_wrapper"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/circle_light_blue"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/monthlySafeToSend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:gravity="center"
                        android:text="$100.000"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Presupuesto\nMensual"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/promos_button"
        style="?android:attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_promos_states"
        android:text="@string/promos_button"
        android:textColor="@color/white" />

</LinearLayout>